<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <group android:id="@+id/group1">
                <item
                    android:id="@+id/homeFragment"
                    android:title="@string/home"
                    />
                <item
                    android:id="@+id/item2"
                    android:title="@string/apartment"
                    />
                <item
                    android:id="@+id/item3"
                    android:title="@string/shoes"
                    />
                <item
                    android:id="@+id/item4"
                    android:title="@string/tops"
                    />
                <item
                    android:id="@+id/item5"
                    android:title="@string/whishlist"
                    />
                <item
                    android:id="@+id/bottomSheetFragment"
                    android:title="@string/shopping_cart"
                    />

        </group>


</menu>